--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title> Single Page Application in VanillaJS </title>
-    <link rel="stylesheet" href="src/css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="App"></div>
